# osdev-homework

barebones-mainline/: makefile
barebones-mainline/source/arch/: gdt.c  interrupt.c  interrupt.h  start.S
barebones-mainline/source/boot/: boot.S
barebones-mainline/source/core/: gdt.c  gdt.h  kernel.S  kernel.cpp
barebones/source/: boot.s  linker.ld
cross-toolchains/: setupenv.sh
higherhalf-barebones/: makefile
higherhalf-barebones/source/: boot.s  kernel.cpp  linker.ld  terminal.h
osdev/: LICENSE  makefile
osdev/arch/i386/: arch_irq.h  arch_process.h  arch_protm.h  arch_thread.h  irq.S  irq.c  process.c  start.S  thread.c
osdev/demo/: airplane.c  snake.c  timer_demo.c  timer_demo2.c
osdev/drivers/display/: framebuffer_driver.c  graphics_driver.c  terminal_driver.c
osdev/drivers/input/: kb_driver.c
osdev/drivers/platform/: platform_bus.c  platform_devices.c
osdev/drivers/rtc/: timer_driver.c
osdev/drivers/serial/: log_driver.c
osdev/include/drivers/: framebuffer_driver.h  graphics_driver.h  kb_driver.h  log_driver.h  platform_bus.h  platform_devices.h  terminal_driver.h  timer_driver.h
osdev/include/kernel/: bus.h  device.h  (+5 more)
osdev/kernel/: bus.c  init.c  irq.c  kernel.c  process.c  thread.c
osdev/source/: linker.ld
osdev/source/ut/: CMakeLists.txt  cxa_guard_ut.c  heap_ut.c  lock_ut.c  main.c
osdev/tests/: CMakeLists.txt  list_ut.c
osdev/tools/: setupenv.sh
protectedmode-barebones/: makefile
protectedmode-barebones/source/: bootloader.S
realmode-barebones/: makefile
realmode-bootloader/source/: bootloader.S  bootloader.asm
(+108 files in other folders)
